[workspace]                                  # 公民区块链主体的子工作空间
members = [
    "node",                                  # 链节点程序
    "node/vendor",                           # 本地覆盖的 GRANDPA voter 持久化实现
    "onchina",                               # onchina 多机构统一控制台:CID 身份 + 链下明细 + 鉴权 + 颁发(ADR-029/030)
    "crates/chain-signing",                  # Rust host 端链交易签名材料唯一真源
    "runtime",                               # 链上运行时
    "runtime/primitives",                    # 运行时共享常量与基础类型

    "runtime/admins/admin-primitives",        # admins 模组-管理员共用类型与 trait
    "runtime/admins/public-admins",           # admins 模组-公权机构管理员（含固定治理档运行期治理）
    "runtime/admins/private-admins",          # admins 模组-私权机构管理员
    "runtime/admins/personal-admins",         # admins 模组-个人多签管理员
    "runtime/governance/grandpakey-change",         # 治理-GRANDPA 密钥治理模块 pallet
    "runtime/governance/resolution-destro",   # 治理-决议销毁模块 pallet
    "runtime/governance/runtime-upgrade",    # 治理-协议升级模块 pallet
    "runtime/public/election-campaign",      # 公权模组-选举业务模块骨架 pallet
    "runtime/public/legislation-yuan",       # 公权模组-立法院模块 pallet(法律结构化上链,ADR-027)
    "runtime/votingengine",    # 投票引擎核心(共用基础设施:Proposals/反向索引/状态机/快照/锁/清理)
    "runtime/votingengine/internal-vote",  # 内部投票 pallet(管理员一人一票)
    "runtime/votingengine/joint-vote",     # 联合投票 pallet(管理员多签 + 全民兜底)
    "runtime/votingengine/election-vote",   # 选举投票 pallet(普选+互选,Phase 3)
    "runtime/votingengine/legislation-vote",  # 立法投票 pallet(立法机构专属:单院/两院/特别案公投,ADR-027)

    "runtime/issuance/citizen-issuance", # 发行-公民发行模块 pallet
    "runtime/issuance/fullnode-issuance",        # 发行-全节点发行模块 pallet
    "runtime/issuance/onchain-issuance",         # 发行-链上发行代币(Plain FT, ADR-011) pallet
    "runtime/issuance/resolution-issuance",        # 发行-决议发行完整流程模块 pallet
    "runtime/issuance/provincialbank-interest",   # 发行-省储行利息模块 pallet
    "runtime/otherpallet/citizen-identity",    # 其他-链上公民身份模块 pallet
    "runtime/otherpallet/pow-difficulty",   # 其他-PoW 动态难度调整模块 pallet
    "runtime/otherpallet/address-registry",   # 其他-地址变更上链模块 pallet
    "runtime/otherpallet/square-post",   # 其他-广场动态链上发布索引模块 pallet
    "runtime/genesis",                           # 创世模块 pallet

    "runtime/transaction/offchain-transaction", # 交易-链下交易手续费模块 pallet
    "runtime/transaction/onchain-transaction",  # 交易-链上交易手续费模块 pallet
    "runtime/entity/entity-primitives",          # 实体模组-生命周期共用类型与 trait
    "runtime/entity/public-manage",              # 实体模组-公权机构生命周期
    "runtime/entity/private-manage",             # 实体模组-私权机构生命周期
    "runtime/entity/personal-manage",            # 实体模组-个人多签账户生命周期
    "runtime/transaction/multisig-transfer",     # 交易-机构多签名地址转账模块 pallet
    "runtime/transaction/institution-asset",  # 交易-机构账户资金白名单公共模块

]
resolver = "2"

[workspace.package]                                         # 子工作空间元信息
edition = "2021"
version = "1.0.0"
authors = ["voyager_rhett <chinanation@icloud.com>"]
repository = "https://github.com/ChinaNation/GMB"
homepage = "https://github.com/ChinaNation/GMB"
license = "MIT"

[workspace.lints.rust]                                      # 统一 Rust lint 规则
unsafe_code = "warn"

[workspace.lints.clippy]                                    # 统一 Clippy lint 规则（阶段1：先收紧到 warn）
all = "warn"
unwrap_used = "warn"
expect_used = "warn"
dbg_macro = "warn"
todo = "warn"

[workspace.dependencies]
# 本地
citizenchain = { path = "runtime" }

# 工具
codec      = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde      = { version = "1.0.197", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.114", default-features = false, features = ["alloc"] }
clap       = { version = "4.5.3", features = ["derive"] }
futures    = { version = "0.3.30", features = ["thread-pool"] }
futures-timer = { version = "3.0.2" }
jsonrpsee  = { version = "0.24.2", features = ["server"] }
array-bytes = { version = "6.2.2", default-features = false }
ahash = { version = "0.8.2" }
assert_matches = { version = "1.5.0" }
async-trait = { version = "0.1.88" }
dyn-clone = { version = "1.0.16" }
finality-grandpa = { version = "0.16.3", default-features = false }
log = { version = "0.4.22", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
thiserror = { version = "1.0.64" }
tokio = { version = "1.45.0", default-features = false }

# SDK 核心零件 (统一使用 stable2512)
sp-api = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-application-crypto = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-arithmetic = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-block-builder = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-blockchain = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-consensus = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-consensus-pow = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-core = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-crypto-hashing = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-genesis-builder = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-inherents = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-io = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-keyring = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-keystore = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-offchain = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-runtime = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-session = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-storage = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-std = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-tracing = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-transaction-pool = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-timestamp = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sp-version = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }

sc-basic-authorship = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }
sc-block-builder = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sc-cli = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }
sc-client-api = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }
sc-consensus = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }
sc-consensus-grandpa = { path = "node/vendor" }
sc-consensus-pow = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }
sc-chain-spec = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }
sc-executor = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }
sc-network = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }
sc-network-common = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sc-network-gossip = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sc-network-sync = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sc-network-test = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }
sc-network-types = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
sc-offchain = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }
sc-service = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }
sc-utils = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }

fork-tree = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
prometheus-endpoint = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false, package = "substrate-prometheus-endpoint" }
sc-telemetry = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }
sc-transaction-pool = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }
sc-transaction-pool-api = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }
substrate-test-runtime-client = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }

frame-executive = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
frame-support = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
frame-system = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
frame-benchmarking = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
frame-system-benchmarking = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
frame-try-runtime = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }

# Runtime API
frame-system-rpc-runtime-api = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }

# Pallets
pallet-assets = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
pallet-balances = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
pallet-grandpa = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
pallet-timestamp = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
pallet-transaction-payment = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }
substrate-frame-rpc-system = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }

# Build 工具
substrate-build-script-utils = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }
substrate-wasm-builder = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix-citizenapp-grandpa" }

# 本地覆盖 libp2p-websocket：公开 tls::Config 的 client 字段，
# 支持在 transport.rs 中替换为自定义 TLS 客户端（跳过 CA 校验，
# P2P 自签证书场景——身份认证由 Noise 协议通过 peer ID 保证）。
[patch.crates-io]
libp2p-websocket = { path = "node/libp2p-websocket" }
