[workspace]                                  # 公民储备委员会软件工作空间
members = [
    "backend",                              # 后端服务
    "desktop",                              # 桌面端
]
resolver = "2"

[workspace.package]                          # 工作空间统一元信息
edition = "2021"
version = "0.0.1"
authors = ["voyager_rhett <chinanation@icloud.com>"]
repository = "https://github.com/ChinaNation/GMB"
license = "MIT"
