[package]
name = "primitives"   # 全局常量模块
edition.workspace = true   # 默认 Rust 版本
version.workspace = true   # 版本号
authors.workspace = true   # 作者
repository.workspace = true  #项目仓库
license = "MIT"        # 授权协议 MIT

[dependencies]
# SCALE 编解码
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

# Substrate primitives —— 你现在就用到了
 sp-core = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]

std = [
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
]