[package]
name = "node"
description = "CitizenChain node built with Substrate."
homepage.workspace = true
publish = false
edition.workspace = true   # 默认 Rust 版本
version.workspace = true   # 版本号
authors.workspace = true   # 作者
repository.workspace = true  #项目仓库
license = "MIT"        # 授权协议 MIT

build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
hex = "0.4"
hex-literal = "0.4"
clap = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, default-features = true }
primitives = { path = "../runtime/primitives" }
ocl = { version = "0.19", optional = true }

# substrate client
sc-basic-authorship = { workspace = true, default-features = true }
sc-cli = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-consensus = { workspace = true, default-features = true }
sc-consensus-grandpa = { workspace = true, default-features = true }
sc-consensus-pow = { workspace = true, default-features = true }
sc-chain-spec = { workspace = true, default-features = true }
sc-executor = { workspace = true, default-features = true }
sc-network = { workspace = true, default-features = true }
sc-offchain = { workspace = true, default-features = true }
sc-service = { workspace = true, default-features = true }

sc-telemetry = { workspace = true, default-features = true }
sc-transaction-pool = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }
sp-consensus-pow = { workspace = true, default-features = true }
sp-consensus-grandpa = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-genesis-builder = { workspace = true, default-features = true }
sp-keystore = { workspace = true, default-features = true }

# substrate primitives
sp-api = { workspace = true, default-features = true }
sp-block-builder = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-consensus = { workspace = true, default-features = true }
sp-inherents = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-keyring = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-storage = { workspace = true, default-features = true }
sp-timestamp = { workspace = true, default-features = true }

# frame and pallets
frame-metadata-hash-extension = { workspace = true, default-features = true }
frame-system = { workspace = true, default-features = true }
pallet-transaction-payment = { workspace = true, default-features = true }
pallet-transaction-payment-rpc = { workspace = true, default-features = true }
substrate-frame-rpc-system = { workspace = true, default-features = true }
codec = { workspace = true, default-features = true }

# These dependencies are used for runtime benchmarking
frame-benchmarking-cli = { workspace = true, default-features = true }

# Local Dependencies
citizenchain = { workspace = true }
pow-difficulty-module = { path = "../runtime/otherpallet/pow-difficulty-module", default-features = true }
fullnode-pow-reward = { path = "../runtime/issuance/fullnode-pow-reward", default-features = true }
onchain-transaction-pow = { path = "../runtime/transaction/onchain-transaction-pow", default-features = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true, default-features = true }

[features]
default = ["std"]
std = ["citizenchain/std"]
gpu-mining = ["ocl"]
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
    "frame-benchmarking-cli/runtime-benchmarks",
	"citizenchain/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-system/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"citizenchain/try-runtime",
	"sp-runtime/try-runtime",
]
## 开发链模式：6秒出块、极低难度
dev-chain = ["citizenchain/dev-chain", "primitives/dev-chain"]
