[package]
name = "node"
description = "CitizenChain node built with Substrate."
default-run = "citizenchain"
homepage.workspace = true
publish = false
edition.workspace = true   # 默认 Rust 版本
version.workspace = true   # 版本号
authors.workspace = true   # 作者
repository.workspace = true  #项目仓库
license = "MIT"        # 授权协议 MIT

build = "build.rs"

[[bin]]
name = "citizenchain"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
hex = "0.4"
hex-literal = "0.4"
clap = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true }
log = { workspace = true, default-features = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, default-features = true }
primitives = { path = "../runtime/primitives" }
ocl = { version = "0.19", optional = true }
rcgen = { version = "0.13", default-features = false, features = ["ring"] }

# substrate client
sc-basic-authorship = { workspace = true, default-features = true }
sc-cli = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-consensus = { workspace = true, default-features = true }
sc-consensus-grandpa = { workspace = true, default-features = true }
sc-consensus-pow = { workspace = true, default-features = true }
sc-chain-spec = { workspace = true, default-features = true }
sc-executor = { workspace = true, default-features = true }
sc-network = { workspace = true, default-features = true }
sc-offchain = { workspace = true, default-features = true }
sc-service = { workspace = true, default-features = true }

sc-telemetry = { workspace = true, default-features = true }
sc-transaction-pool = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }
sp-consensus-pow = { workspace = true, default-features = true }
sp-consensus-grandpa = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-genesis-builder = { workspace = true, default-features = true }
sp-keystore = { workspace = true, default-features = true }

# substrate primitives
sp-api = { workspace = true, default-features = true }
sp-block-builder = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-consensus = { workspace = true, default-features = true }
sp-inherents = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-keyring = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-storage = { workspace = true, default-features = true }
sp-timestamp = { workspace = true, default-features = true }

# frame and pallets
frame-metadata-hash-extension = { workspace = true, default-features = true }
frame-system = { workspace = true, default-features = true }
pallet-transaction-payment = { workspace = true, default-features = true }
pallet-transaction-payment-rpc = { workspace = true, default-features = true }
substrate-frame-rpc-system = { workspace = true, default-features = true }
codec = { workspace = true, default-features = true }

# These dependencies are used for runtime benchmarking
frame-benchmarking-cli = { workspace = true, default-features = true }

# Local Dependencies
citizenchain = { workspace = true }
pow-difficulty = { path = "../runtime/otherpallet/pow-difficulty", default-features = true }
genesis-pallet = { path = "../runtime/genesis", default-features = true }
fullnode-issuance = { path = "../runtime/issuance/fullnode-issuance", default-features = true }
onchain-transaction = { path = "../runtime/transaction/onchain-transaction", default-features = true }
# 扫码支付 Step 2b-ii-β-2-a 新增:node 端 pool_submitter 需要直接 use
# offchain-transaction 的 batch_item / pallet::Call 类型构造 extrinsic。
offchain-transaction = { path = "../runtime/transaction/offchain-transaction", default-features = true }
frame-support = { workspace = true, default-features = true }
frame-system-rpc-runtime-api = { workspace = true, default-features = true }

# 桌面 GUI（Tauri）
tauri = { version = "2", features = [] }
# 中文注释：必须用 ~2.6 而不是 "2"，否则 cargo 会拉到 2.7.0，
# 而 frontend/package-lock.json 锁的是 2.6.0，Tauri build 时会因为
# major/minor 版本不一致直接 fail（"Found version mismatched Tauri packages"）。
tauri-plugin-dialog = "~2.6"
libc = "0.2"
bs58 = "0.5"
blake2b_simd = "1"
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid"] }
ed25519-dalek = "2"
sha2 = "0.10"
rand = { workspace = true, default-features = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sysinfo = "0.34"
thiserror = { workspace = true }
twox-hash = "2"
unicode-normalization = "0.1"
zeroize = "1"
tokio = { workspace = true, default-features = true, features = ["time"] }

[build-dependencies]
substrate-build-script-utils = { workspace = true, default-features = true }
tauri-build = { version = "2", features = [] }

[features]
default = ["std", "custom-protocol"]
std = ["citizenchain/std"]
custom-protocol = ["tauri/custom-protocol"]
gpu-mining = ["ocl"]
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
    "frame-benchmarking-cli/runtime-benchmarks",
	"citizenchain/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-system/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"citizenchain/try-runtime",
	"sp-runtime/try-runtime",
]
