[workspace]                                  # 公民储备委员会软件工作空间
members = [
    "src-tauri",                            # Tauri 桌面壳
]
resolver = "2"

[workspace.package]                          # 工作空间统一元信息
edition = "2021"
version = "0.0.1"
authors = ["voyager_rhett <chinanation@icloud.com>"]
repository = "https://github.com/ChinaNation/GMB"
license = "MIT"

[package]
name = "nodeui-frontend"  # 前端模块
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license = "MIT"

[dependencies]
